<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@drawable/backdeg">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        android:background="#80FFFFFF"
        android:alpha="0.9">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/consejoTextView"
                android:layout_width="309dp"
                android:layout_height="289dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/consejo_aleatorio"
                android:textColor="@color/dark_green"
                android:textSize="30sp"
                android:alpha="0.9"/>

            <TextView
                android:id="@+id/cantidadRegistrosTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Limpiar"
                android:textSize="0sp"
                android:padding="1dp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="199dp"
        android:layout_height="234dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/idea"
        android:src="@drawable/ideas"
        android:translationZ="10dp" />

</RelativeLayout>
